--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "terser-webpack-plugin": "^5.2.5",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
+  },
+  "devDependencies": {
+    "motionlink-cli": "^0.5.3"
   }
 }
