--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: 'My Workflow'
+name: Build and Deploy to Netlify
 
 on:
   push:
@@ -6,13 +6,34 @@ on:
       - 'motion-link-*'
 
 jobs:
-  deploy:
-    name: 'Deploy to Netlify'
-    runs-on: ubuntu-latest
-
+  build:
+    runs-on: ubuntu-20.04
     steps:
-      - uses: jsmrcaga/action-netlify-deploy@v1.6.0
+      - uses: actions/checkout@v2
         with:
+          submodules: true  # Fetch Hugo themes (true OR recursive)
+          fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
+
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v2
+        with:
+          hugo-version: '0.91.2'
+          # extended: true
+      - name: Build
+        run: make install ci
+        env: 
+          NOTION_KEY: ${{ secrets.NOTION_KEY }}
+      - name: Deploy to Netlify
+        uses: nwtgck/actions-netlify@v1.2
+        with:
+          publish-dir: './public'
+          production-branch: master
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          deploy-message: "Deploy from GitHub Actions"
+          enable-pull-request-comment: false
+          enable-commit-comment: true
+          overwrites-pull-request-comment: true
+        env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-          NETLIFY_DEPLOY_TO_PROD: true
+        timeout-minutes: 1
